updating files with fixes

--- a/Appendices/GanttCharts.tex
+++ b/Appendices/GanttCharts.tex
@@ -3,7 +3,7 @@
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{Gantt_Control_Board}
+%\includegraphics[width=\textwidth]{Gantt_Control_Board}
 \caption{Gantt chart for project focused on the Control Board}
 \label{fig:gantt}
 \end{figure}
