Added testing section and added several headings

--- a/main.tex
+++ b/main.tex
@@ -110,6 +110,7 @@
 % \subfile{Chapters/Test_and_Validation}
 % \subfile{Chapters/Methodology}
 % \subfile{Chapters/Schedule}
+\subfile{Chapters/Testing}
 \pagebreak
 \bibliography{export}{}
 \bibliographystyle{plain}
