found a bunch of writing and added it

--- a/export.bib
+++ b/export.bib
@@ -2,7 +2,7 @@
 	author={Paul Emerald},
 	year={1998},
 	month={May 6,},
-	title={Non-Intrusive Hall-Effect Current-Sensing Techniques Provide Safe, Reliable Detection and Protection for Power Electronics &nbsp;},
+	title={Non-Intrusive Hall-Effect Current-Sensing Techniques Provide Safe, Reliable Detection and Protection for Power Electronics},
 	institution={Allegro MicroSystems LLC},
 	url={http://www.allegromicro.com/en/Design-Center/Technical-Documents/Hall-Effect-Sensor-IC-Publications/Non-Intrusive-Hall-Effect-Current-Sensing-Techniques-for-Power-Electronics.aspx}
 }
@@ -34,7 +34,7 @@
 	month={April 26,},
 	title={Modular Robotic Arm},
 	url={https://web.wpi.edu/Pubs/E-project/Available/E-project-042915-203350/unrestricted/MRA_Final_Report.pdf},
-    urldate={September 11, 2017}
+	urldate={September 11, 2017}
 }
 @misc{RMM,
 	title={Reconfigurable Modular Manipulator (RMM)},
@@ -54,6 +54,13 @@
 	volume={2017},
 	number={September 11,},
 	url={www.robots.com/}
+}
+@misc{IRB_120,
+	title={Robotické rameno ABB IRB 120},
+	author={ÚRK FEI STU},
+	volume={2016},
+	number={February 8,},
+	url={https://www.youtube.com/watch?v=KpdOJZ0nWtU},
 }
 
 @article{Current_Sensing,
@@ -98,4 +105,49 @@
 	volume={2017},
 	number={Sep 14,},
 	url={http://www.chrobotics.com/library/understanding-euler-angles}
+}
+@misc{Choose_Sensor_Technology,
+	title={Choosing the Right Sensor Technology},
+	volume={2017},
+	number={October,13},
+	url={http://www.beisensors.com/customer-resources/bei-choosing-the-right-sensor-technology.html}
+}
+@article{Pot_vs_Sensor,
+	title={Pot vs. Sensor},
+	author={Paul Cain},
+	pages={44,46},
+	journal={Electronic Products},
+	year={2010},
+	edition={November},
+	url={http://www.mouser.com/pdfDocs/Piher_Pot_vs_Sensor.pdf}
+}
+@techreport{Choose_Position_Sensor,
+	title={Choosing the Right Position Sensor},
+	author={Mark Howard},
+	institution={Zettlex},
+	url={http://www.zettlex.com/articles/choosing-right-position-sensor}
+}
+@article{CANvSPI,
+	title={CAN We Talk?},
+	author={Niall Murphy},
+	journal={Embedded Systems Programming},
+	year={2003},
+	edition={June},
+	url={https://www.eetimes.com/document.asp?doc_id=1195838}
+}
+@article{SerialCompared,
+	title={Serial Protocols Compared},
+	author={John Patrick},
+	year={2002},
+	edition={June},
+	journal={Embedded Systems Programming},
+	url={https://www.embedded.com/design/connectivity/4023975/Serial-Protocols-Compared}
+}
+@techreport{CAN_Requirements,
+	title={Controller Area Network Physical Layer Requirements},
+	author={Steve Corrigan},
+	year={2008},
+	institution={Texas Instruments},
+	month={January},
+	url={http://www.ti.com/lit/an/slla270/slla270.pdf}
 }
