--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,7 @@
 %Build the custom title page.
 \begin{document}
 \begin{titlepage}
+\pagenumbering{Alph}
 \begin{center}
 \begin{minipage}{0.4\textwidth}
 %\includegraphics[scale=0.2]{WPI_Inst_Prim_BLK.png}
