changed the date

--- a/Appendices/GanttCharts.tex
+++ b/Appendices/GanttCharts.tex
@@ -1,9 +1,9 @@
 \section{Gantt Chart}
 \label{app:Gantts}
 
-\begin{figure}[H]
-\centering
+%\begin{figure}[H]
+%\centering
 %\includegraphics[width=\textwidth]{Gantt_Control_Board}
-\caption{Gantt chart for project focused on the Control Board}
-\label{fig:gantt}
-\end{figure}
+%\caption{Gantt chart for project focused on the Control Board}
+%\label{fig:gantt}
+%\end{figure}
