--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@
 \\ 
 \vspace*{1cm}
 	\Huge
-	\textbf{Major Qualifying Project Report}\\
+	\textbf{Major Qualifying Project Progress Report}\\
 \vspace{1cm}
 	\LARGE
 	\text{MIRA: Modular Interchangeable Robotic Arm}\\
@@ -78,7 +78,7 @@
 	\LARGE
 	\textbf{Submitted on} \\
     \Large
-	\textit{February 2, 2018} \\
+	\textit{March 3, 2018} \\
     
 \vspace{0.8cm}
 	\LARGE
@@ -110,7 +110,7 @@
 \subfile{Chapters/Capstone_Reqs}
 \subfile{Chapters/Constraints}
 \subfile{Chapters/Acceptance_Criteria}
-% \subfile{Chapters/Test_and_Validation}
+%\subfile{Chapters/Test_and_Validation}
 \subfile{Chapters/Testing}
 % \subfile{Chapters/Conclusion}
 \pagebreak
