--- a/export.bib
+++ b/export.bib
@@ -14,11 +14,11 @@
 	institution={Analog Devices},
 	url={http://www.analog.com/media/en/technical-documentation/application-notes/AN-1123.pdf}
 }
-@misc{Arduino_Breadboard,
+@article{Arduino_Breadboard,
 	author={David Mellis and Carlyn Maw and Rory Nugent},
 	title={Arduino - Setting up an Arduino on a Breadboard},
-	volume={2017},
-	number={September 18,},
+	year={2017},
+	month={September 18,},
 	url={https://www.arduino.cc/en/Main/Standalone}
 }
 @techreport{Crystal_Guide,
@@ -37,29 +37,29 @@
 	urldate={September 11, 2017}
 }
 @misc{RMM,
+	author={Traclabs},
 	title={Reconfigurable Modular Manipulator (RMM)},
-	volume={2017},
-	number={Sep 11,},
-	url={https://traclabs.com/projects/rmm/}
+	note={Accessed on Sep 11, 2017},
+	howpublished={https://traclabs.com/projects/rmm/}
 }
 @misc{igus,
-	title={robolink robot components| igus},
-	volume={2017},
-	number={September 6,},
-	url={www.igus.com/robolink/robot}
+	author={igus},
+	title={robolink robot components},
+	note={Accessed on September 6, 2017},
+	howpublished={www.igus.com/robolink/robot}
 }
 
 @misc{RobotWorx,
+	author={RobotWorx},
 	title={RobotWorx: Expert Industrial Robot Integrator},
-	volume={2017},
-	number={September 11,},
-	url={www.robots.com/}
+	note={Accessed on September 11, 2017},
+	howpublished={www.robots.com/}
 }
-@misc{IRB_120,
+@image{IRB_120,
 	title={Robotické rameno ABB IRB 120},
 	author={ÚRK FEI STU},
-	volume={2016},
-	number={February 8,},
+	year={2016},
+	month={February 8,},
 	url={https://www.youtube.com/watch?v=KpdOJZ0nWtU},
 }
 
@@ -77,10 +77,10 @@
 	doi={10.1109/JSEN.2009.2013914}
 }
 @misc{Motor_Calculations,
-	title={Calculations | Simple Electric Motors},
-	volume={2017},
-	number={September 17,},
-	url={http://simplemotor.com/calculations/}
+	author={Simple Electric Motors}
+	title={Calculations},
+	note={Accessed on September 17, 2017},
+	howpublished={http://simplemotor.com/calculations/}
 }
 @misc{Robot_Geometry,
 	author={R. M. Crowder},
@@ -100,17 +100,17 @@
 	edition={2. ed.},
 	isbn={9780079132727}
 }
-@misc{Euler_Angles,
+@article{Euler_Angles,
 	title={Understanding Euler Angles | CH Robotics},
-	volume={2017},
+	year={2017},
 	number={Sep 14,},
 	url={http://www.chrobotics.com/library/understanding-euler-angles}
 }
 @misc{Choose_Sensor_Technology,
+	author={BEI Sensors},
 	title={Choosing the Right Sensor Technology},
-	volume={2017},
-	number={October,13},
-	url={http://www.beisensors.com/customer-resources/bei-choosing-the-right-sensor-technology.html}
+	note={Accessed on Obtober 13, 2017},
+	howpublished={http://www.beisensors.com/customer-resources/bei-choosing-the-right-sensor-technology.html}
 }
 @article{Pot_vs_Sensor,
 	title={Pot vs. Sensor},
@@ -121,11 +121,12 @@
 	edition={November},
 	url={http://www.mouser.com/pdfDocs/Piher_Pot_vs_Sensor.pdf}
 }
-@techreport{Choose_Position_Sensor,
+@misc{Choose_Position_Sensor,
 	title={Choosing the Right Position Sensor},
 	author={Mark Howard},
 	institution={Zettlex},
-	url={http://www.zettlex.com/articles/choosing-right-position-sensor}
+	note={Accessed on September 17, 2017},
+	howpublished={http://www.zettlex.com/articles/choosing-right-position-sensor}
 }
 @article{CANvSPI,
 	title={CAN We Talk?},
