Added a section to Methodology on some code stuff

--- a/main.tex
+++ b/main.tex
@@ -119,6 +119,8 @@
 %\subfile{Chapters/Test_and_Validation}
 \subfile{Chapters/Testing}
 % \subfile{Chapters/Conclusion}
+%TODO Recommendations for future work
+%TODO Table of acronyms
 \pagebreak
 \bibliographystyle{ieeetr}
 \bibliography{export}{}
