added CAN bus section

--- a/main.tex
+++ b/main.tex
@@ -106,6 +106,8 @@
 	\tableofcontents
 	\newpage
 	\listoffigures
+	\newpage
+	\listoftables
 \newpage
 
 \pagenumbering{arabic}
@@ -115,7 +117,7 @@
 \subfile{Chapters/Methodology}
 %\subfile{Chapters/Capstone_Reqs}
 %\subfile{Chapters/Constraints}
-\subfile{Chapters/Acceptance_Criteria}
+%\subfile{Chapters/Acceptance_Criteria}
 %\subfile{Chapters/Test_and_Validation}
 \subfile{Chapters/Testing}
 % \subfile{Chapters/Conclusion}
