Add diagram. Bring back appendix.

--- a/main.tex
+++ b/main.tex
@@ -130,7 +130,7 @@
 \begin{appendices}
 %\include{Appendices/Kit_Components}
 %\include{Appendices/GanttCharts}
-%\include{Appendices/Past_Work}
+\include{Appendices/Past_Work}
 \end{appendices}
 
 \end{document}
