--- a/export.bib
+++ b/export.bib
@@ -55,7 +55,7 @@
 	note={Accessed on September 11, 2017},
 	howpublished={www.robots.com/}
 }
-@image{IRB_120,
+@misc{IRB_120,
 	title={Robotické rameno ABB IRB 120},
 	author={ÚRK FEI STU},
 	year={2016},
@@ -77,7 +77,7 @@
 	doi={10.1109/JSEN.2009.2013914}
 }
 @misc{Motor_Calculations,
-	author={Simple Electric Motors}
+	author={Simple Electric Motors},
 	title={Calculations},
 	note={Accessed on September 17, 2017},
 	howpublished={http://simplemotor.com/calculations/}
