Added a bunch of pictures

--- a/main.tex
+++ b/main.tex
@@ -60,41 +60,45 @@
 \begin{titlepage}
 \pagenumbering{Alph}
 \begin{center}
-\begin{minipage}{0.4\textwidth}
-%\includegraphics[scale=0.2]{WPI_Inst_Prim_BLK.png}
-\end{minipage}
-\begin{minipage}{0.5\textwidth}
+\begin{minipage}{\textwidth}
 \centering
+\includegraphics[scale=0.08]{WPI_Inst_Prim_FulClr.png}
+
+\LARGE
 \textsc{Worcester Polytechnic Institute}
+
+\textsc{Major Qualifying Project}
+\vspace*{0.5cm}
+\noindent\rule{\textwidth}{1pt}
+\Huge
+\textbf{MIRA}
 \end{minipage}
-\\ 
-\vspace*{1cm}
-	\Huge
-	\textbf{Major Qualifying Project Progress Report}\\
-\vspace{1cm}
-	\LARGE
-	\text{MIRA: Modular Interchangeable Robotic Arm}\\
+
+\LARGE
+\textsc{Modular Interchangeable Robotic Arm}
 \vspace{2cm}
-	\Large
-	\text{}\\
-    \textbf{}\\
-    \textbf{}\\
-\vfill
+\Large
+\text{}\\
+\textbf{}\\
+\textbf{}\\
+\vfill    
 \vspace{0.8cm}
-	\LARGE
-	\textbf{Submitted on} \\
-    \Large
-	\textit{March 3, 2018} \\
-    
+
+\LARGE
+\textbf{Submitted by} \\
+\Large
+Chris O'Shea, RBE\\
+\Large
+Alex Taglieri, RBE/CS \\
+\Large
+Ben Titus, RBE/ECE \\
 \vspace{0.8cm}
-	\LARGE
-	\textbf{Submitted by} \\
-    \Large
-	Chris O'Shea, RBE\\
-	\Large
-    Alex Taglieri, RBE/CS \\
-	\Large
-    Ben Titus, RBE/ECE \\
+\LARGE
+\textbf{Advised by} \\
+\Large
+Susan Jarvis \\
+\Large
+Craig Putnam \\
     
 \vfill
 \end{center}
