Added some pictures, PDFs, and included the motor driver PCB as an appendix

--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 
 \title{MQP Report}
 
+
 \usepackage[table]{xcolor}
 \usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 \usepackage{minted}
@@ -17,6 +18,7 @@
 \usepackage{cite}
 \usepackage{titlesec}
 \usepackage[nomessages]{fp}
+\usepackage{pdfpages}
 % \usepackage[sorting=nyt,firstinits=true]{biblatex}
 \graphicspath{{./Pictures/}}
 
@@ -135,6 +137,8 @@ Craig Putnam \\
 %\include{Appendices/Kit_Components}
 %\include{Appendices/GanttCharts}
 \include{Appendices/Past_Work}
+\include{Appendices/Motor_Driver}
+
 \end{appendices}
 
 \end{document}
