Each section is on a new page

--- a/main.tex
+++ b/main.tex
@@ -117,15 +117,15 @@ Craig Putnam \\
 \newpage
 
 \pagenumbering{arabic}
-\subfile{Chapters/Introduction}
-\subfile{Chapters/Background}
+\include{Chapters/Introduction}
+\include{Chapters/Background}
 %\subfile{Chapters/Description_of_Work}
-\subfile{Chapters/Methodology}
+\include{Chapters/Methodology}
 %\subfile{Chapters/Capstone_Reqs}
 %\subfile{Chapters/Constraints}
 %\subfile{Chapters/Acceptance_Criteria}
 %\subfile{Chapters/Test_and_Validation}
-\subfile{Chapters/Testing}
+\include{Chapters/Testing}
 % \subfile{Chapters/Conclusion}
 %TODO Recommendations for future work
 %TODO Table of acronyms
