Added more PCB documents to the appendices

--- a/export.bib
+++ b/export.bib
@@ -53,7 +53,7 @@
 	author={RobotWorx},
 	title={RobotWorx: Expert Industrial Robot Integrator},
 	note={Accessed on September 11, 2017},
-	howpublished={www.robots.com/}
+	howpublished={www.robots.com}
 }
 @misc{IRB_120,
 	title={Robotické rameno ABB IRB 120},
