--- a/main.tex
+++ b/main.tex
@@ -138,6 +138,11 @@ Craig Putnam \\
 %\include{Appendices/GanttCharts}
 \include{Appendices/Past_Work}
 \include{Appendices/Motor_Driver}
+\include{Appendices/Motor_Driver_Current}
+\include{Appendices/Load_Cell_Amp}
+\include{Appendices/CAN_Transceiver}
+\include{Appendices/Joint_Board_Booster}
+\include{Appendices/TM4C_Dev_Board}
 
 \end{appendices}
 
