citations for software section

--- a/export.bib
+++ b/export.bib
@@ -152,3 +152,21 @@
 	month={January},
 	url={http://www.ti.com/lit/an/slla270/slla270.pdf}
 }
+@misc{SerialSparkfun,
+	title={Serial Communication}
+	author={Sparkfun}
+	note={Accessed on April 16, 2018}
+	howpublished={https://learn.sparkfun.com/tutorials/serial-communication/all}
+}
+@misc{ThreadJava,
+	title={Multithreading in Java}
+	author={GeeksforGeeks}
+	note={Accessed on April 15, 2018}
+	howpublished={https://www.geeksforgeeks.org/multithreading-in-java/}
+}
+@misc{NRJavaSerial, 
+	title={NRJavaSerial},
+	author={NeuronRobotics},
+	note={Accessed on April 20, 2018}
+	howpublished={https://github.com/NeuronRobotics/nrjavaserial}
+}
