--- a/export.bib
+++ b/export.bib
@@ -153,20 +153,49 @@
 	url={http://www.ti.com/lit/an/slla270/slla270.pdf}
 }
 @misc{SerialSparkfun,
-	title={Serial Communication}
-	author={Sparkfun}
-	note={Accessed on April 16, 2018}
+	title={Serial Communication},
+	author={Sparkfun},
+	note={Accessed on April 16, 2018},
 	howpublished={https://learn.sparkfun.com/tutorials/serial-communication/all}
 }
 @misc{ThreadJava,
-	title={Multithreading in Java}
-	author={GeeksforGeeks}
-	note={Accessed on April 15, 2018}
+	title={Multithreading in Java},
+	author={GeeksforGeeks},
+	note={Accessed on April 15, 2018},
 	howpublished={https://www.geeksforgeeks.org/multithreading-in-java/}
 }
 @misc{NRJavaSerial, 
 	title={NRJavaSerial},
 	author={NeuronRobotics},
-	note={Accessed on April 20, 2018}
+	note={Accessed on April 20, 2018},
 	howpublished={https://github.com/NeuronRobotics/nrjavaserial}
 }
+@misc{gson, 
+	title={Gson},
+	author={Alphabet},
+	note={Accessed on April 15, 2018},
+	howpublished={https://github.com/google/gson}
+}
+@misc{maven, 
+	title={Maven},
+	author={Apace Maven Project},
+	note={Accessed on March 15, 2018},
+	howpublished={https://maven.apache.org/what-is-maven.html}
+}
+@misc{Solidworks,
+	title={Solidworks},
+	author={Dassault Systems},
+	howpublished{https://www.solidworks.com/}
+}
+@misc{Cura,
+	title={Ultimaker Cura Software},
+	author={Ultimaker},
+	howpublished{https://ultimaker.com/en/products/ultimaker-cura-software}
+}
+@misc{Taz6,
+	title={Lulzbot Taz 6},
+	author={Lulzbot},
+	howpublished{https://www.lulzbot.com/store/printers/lulzbot-taz-6}
+}
+
+
