Fixed up the cover page!

--- a/main.tex
+++ b/main.tex
@@ -64,46 +64,49 @@
 \begin{center}
 \begin{minipage}{\textwidth}
 \centering
-\includegraphics[scale=0.08]{WPI_Inst_Prim_FulClr.png}
+\includegraphics[scale=0.1]{WPI_Inst_Prim_FulClr.png}
 
 \LARGE
 \textsc{Worcester Polytechnic Institute}
-
-\textsc{Major Qualifying Project}
 \vspace*{0.5cm}
 \noindent\rule{\textwidth}{1pt}
 \Huge
-\textbf{MIRA}
-\end{minipage}
-
+\textbf{MIRA} \\
 \LARGE
 \textsc{Modular Interchangeable Robotic Arm}
-\vspace{2cm}
-\Large
-\text{}\\
-\textbf{}\\
-\textbf{}\\
-\vfill    
-\vspace{0.8cm}
+\vspace*{0.5cm}
+\noindent\rule{\textwidth}{1pt}
+\end{minipage}
 
-\LARGE
+\vspace{2cm}
+\vfill    
+
+\Large
+\textbf{Submitted on} \\
+\large
+April 25, 2018\\
+\vspace{0.8cm}
+\Large
 \textbf{Submitted by} \\
-\Large
+\large
 Chris O'Shea, RBE\\
-\Large
+\large
 Alex Taglieri, RBE/CS \\
-\Large
+\large
 Ben Titus, RBE/ECE \\
 \vspace{0.8cm}
-\LARGE
+\Large
 \textbf{Advised by} \\
-\Large
+\large
 Susan Jarvis \\
-\Large
+\large
 Craig Putnam \\
     
 \vfill
 \end{center}
+
+\normalsize
+\noindent \textit{This report represents the work of one or more WPI undergraduate students submitted to the faculty as evidence of completion of a degree requirement. WPI routinely publishes these reports on its web site without editorial or peer review}
 \end{titlepage}
 
 %%%% Document begins here %%%%
